(add) frontend basis

--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 export FLASK_APP=app
-export DATABASE_URI=postgresql://default:yqjr5pJ4dwfX@ep-purple-cell-90035949.us-east-1.postgres.vercel-storage.com:5432/verceldb
+export SQLALCHEMY_DATABASE_URI=postgresql://default:yqjr5pJ4dwfX@ep-purple-cell-90035949.us-east-1.postgres.vercel-storage.com:5432/verceldb
 
 
 
